# mlrs

./: .gitignore  Cargo.toml  roadmap.md
benches/: autograd.rs  elementwise.rs  matmul.rs
examples/: linear1dreg.rs  logists1d.rs  mnist.rs
scripts/: main.py  pyproject.toml
src/: graph.rs  lib.rs  main.rs  matrix.rs  model.rs  numeric.rs  tensor.rs  types.rs  utils.rs
src/backends/: cpu.rs  mod.rs
src/backends/wgpu/: mod.rs
src/ops/: add.rs  add_broadcast.rs  log.rs  mod.rs  neg.rs  none.rs  sub.rs
tests/: mat_mul.rs
web/: README.md
