[package]
name = "mlrs"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
criterion = "0.8"
rayon = "1.11.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
num-traits = "0.2.19"

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "elementwise"
harness=false

[[bench]]
name = "autograd"
harness=false
